examples/test/testpolicy3710.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3710
  namespace: namespace332
spec:
  podSelector:
    matchLabels:
      key9: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value34
          key17: value8
          key46: value48
      podSelector:
        matchLabels:
          key1: value6
          key29: value48
